; ModuleID = '/home/carl/AnghaBench/reactos/dll/appcompat/apphelp/extr_layer.c_Wow64QueryFlag.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/appcompat/apphelp/extr_layer.c_Wow64QueryFlag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_QueryFlag = common dso_local global i32 0, align 4
@ProcessWow64Information = common dso_local global i32 0, align 4
@KEY_WOW64_64KEY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Wow64QueryFlag() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32, align 4
  %3 = load i32, i32* @g_QueryFlag, align 4
  %4 = icmp eq i32 %3, -1
  br i1 %4, label %5, label %20

5:                                                ; preds = %0
  store i64 0, i64* %1, align 8
  %6 = call i32 (...) @NtCurrentProcess()
  %7 = load i32, i32* @ProcessWow64Information, align 4
  %8 = call i32 @NtQueryInformationProcess(i32 %6, i32 %7, i64* %1, i32 8, i32* null)
  store i32 %8, i32* %2, align 4
  %9 = load i32, i32* %2, align 4
  %10 = call i64 @NT_SUCCESS(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %5
  %13 = load i64, i64* %1, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %12
  %16 = load i32, i32* @KEY_WOW64_64KEY, align 4
  br label %18

17:                                               ; preds = %12, %5
  br label %18

18:                                               ; preds = %17, %15
  %19 = phi i32 [ %16, %15 ], [ 0, %17 ]
  store i32 %19, i32* @g_QueryFlag, align 4
  br label %20

20:                                               ; preds = %18, %0
  %21 = load i32, i32* @g_QueryFlag, align 4
  ret i32 %21
}

declare dso_local i32 @NtQueryInformationProcess(i32, i32, i64*, i32, i32*) #1

declare dso_local i32 @NtCurrentProcess(...) #1

declare dso_local i64 @NT_SUCCESS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
